# SuperExchange

./: .gitignore  CITATION.cff  CONTRIBUTING.md  ErOEr1+.csv  Exchange.ipynb  LICENSE  MANIFEST.in  README.md  SUPPORT.md  pyproject.toml
.github/workflows/: tests.yml
docs/: notebook_migration.md
examples/: basic_scan.py
src/superexchange/: __init__.py  __main__.py  cli.py  exchange.py
src/superexchange/data/: __init__.py
tests/: test_exchange.py
tools/: extract_notebook_code.py
