[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superexchange"
version = "0.1.0"
description = "Research code for symmetry-guided superexchange tensor calculations."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Louis-S. Bouchard" }
]
keywords = ["superexchange", "spin qubits", "rare earth", "quantum materials"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.1"]
wolfram = ["wolframclient>=1.1"]
test = []

[project.scripts]
superexchange = "superexchange.cli:main"

[project.urls]
Repository = "https://github.com/lsbouchard/SuperExchange"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"superexchange.data" = ["*.csv"]
